      grid's Vector Type metadata setting.
    - Added tools::compDiv(), which combines grids by dividing the values
      of corresponding voxels.
    - Fixed a bug in the mean curvature computation that could produce NaNs
      in regions with constant values.
    - Added a Grid::topologyDifference() method.
    - Added exp() and sum() methods to math::Vec2, math::Vec3 and math::Vec4.
    - Fixed a bug in the mesh to volume converter that caused incorrect sign
      classifications for the level set rebuild tool.
    - Fixed a build issue reported by Clang 3.2 in tools/GridOperators.h.
    - Made various changes for compatibility with Houdini 13 and with
      C++11 compilers.
      [Contributed by SESI]

    API changes:
    - tools::DualGridSampler is no longer templated on the target grid type,
      and the value accessor is now passed as an argument.

    Houdini:
    - Added topology union, intersection and difference operations to
      the Combine SOP.  These operations combine the active voxel topologies
      of grids that may have different value types.
    - Added a Divide operation to the Combine SOP.
    - Added support for boolean grids to the Combine, Resample, Scatter, Prune
      and Visualize SOPs.
    - The Fill SOP now allows the fill region bounds to be specified either in
      index space (as before), in world space, or using the bounds of geometry
      connected to an optional new reference input.
    - Added a toggle to the Offset Level Set SOP to specify the offset in
      either world or voxel units.
    - Added a toggle to the Transform and Resample SOPs to apply the
      transform to the voxel values of vector-valued grids, in accordance with
      those grids' Vector Type metadata settings.
    - Added a Vector Type menu to the Vector Merge SOP.
    - Removed masking options from the Renormalize SOP (since masking is
      not supported yet).

Version 2.1.0 - December 12, 2013